--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -63,7 +63,7 @@
             <div class="row" id="annotations-value-query-initial">
               <div class="col-xs-3">
                 <label>Value type</label>
-                <select style="width: 100%" name="annotation_value_type" id="annotations-value-type">
+                <select style="width: 100%" name="annotation_value_type" id="value-type">
                   <option>text</option>
                   <option>timestamp</option>
                   <option>boolean</option>
@@ -75,8 +75,8 @@
               <div class="col-xs-3">
                 <label>Value name</label>
                 <div class="input-group" style="width: 100%">
-                  <input class="form-control" style="width: 80%" name="annotation_value_name_like" id="annotations-value-name-text"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op" id="annotations-value-name-option">
+                  <input class="form-control" style="width: 80%" name="annotation_value_name_like" id="value-name-text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op" id="value-name-option">
                     <option>like</option>
                     <option>notlike</option>
                   </select>
@@ -85,8 +85,8 @@
               <div class="col-xs-3">
                 <label>Value</label>
                 <div class="input-group" style="width: 100%">
-                  <input type="text" class="form-control" style="width: 80%" name="annotation_value" id="annotations-value-value-text"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_operator" id="annotations-value-value-operator">
+                  <input type="text" class="form-control" style="width: 80%" name="annotation_value" id="value-value-text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_operator" id="value-value-operator">
                     {% include "eboa_nav/operators.html" %}
                   </select>
                 </div>
