--- a/src/vboa/templates/eboa_nav/query_explicit_references_content.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references_content.html
@@ -95,10 +95,10 @@
                     </div>
                   </div>
                   <!-- Values -->
-                  <div class="row">
+                  <div class="row" id="events-ers-value-query-initial">
                     <div class="col-xs-3">
                       <label>Value type</label>
-                      <select style="width: 100%" name="event_value_type">
+                      <select style="width: 100%" name="event_value_type" id="value-type">
                         <option>text</option>
                         <option>timestamp</option>
                         <option>boolean</option>
@@ -110,8 +110,8 @@
                     <div class="col-xs-3">
                       <label>Value name</label>
                       <div class="input-group" style="width: 100%">
-                        <input class="form-control" style="width: 80%" name="event_value_name_like"/>
-                        <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op">
+                        <input class="form-control" style="width: 80%" name="event_value_name_like" id="value-name-text"/>
+                        <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op" id="value-name-option">
                           <option>like</option>
                           <option>notlike</option>
                         </select>
@@ -120,19 +120,19 @@
                     <div class="col-xs-3">
                       <label>Value</label>
                       <div class="input-group" style="width: 100%">
-                        <input type="text" class="form-control" style="width: 80%" name="event_value"/>
-                        <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator">
+                        <input type="text" class="form-control" style="width: 80%" name="event_value" id="value-value-text"/>
+                        <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator" id="value-value-operator">
                           {% include "eboa_nav/operators.html" %}
                         </select>
                       </div>
                     </div>
                     <div>
-                      <span onclick="vboa.add_value_query_events('more-value-events-query-ers')">
+                      <span onclick="vboa.add_value_query_events('more-value-query-events-ers')" id="events-ers-add-value">
                         <span class="glyphicon glyphicon-plus"></span>
                       </span>
                     </div>
                   </div>
-                  <div id="more-value-events-query-ers">
+                  <div id="more-value-query-events-ers">
                   </div>
                   <!-- Start and stop -->
                   <div class="row">
