--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -31,11 +31,13 @@
     <!-- Load the bundle of scripts -->
     <script src="{{ url_for('static', filename='dist/bundle.js') }}" type="text/javascript"></script>
 
+    {% if earth_observation %}
     <!-- Load cesium library which needs to be external to the bundle -->
     <script src="{{ url_for('static', filename='dist/cesium/Build/Cesium/Cesium.js') }}" type="text/javascript"></script>
 
     <!-- Load cesium library which needs to be external to the bundle -->
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/cesium/Build/Cesium/Widgets/widgets.css') }}">
+    {% endif %}
 
     <div id="updating-page-count-down">
     </div>
